--- a/wind_rag_webapp/wind_rag_webapp/backend/requirements.txt
+++ b/wind_rag_webapp/wind_rag_webapp/backend/requirements.txt
@@ -1,4 +1,7 @@
-fastapi>=0.110
-uvicorn[standard]>=0.27
-openai>=1.40.0
-pydantic>=2.6
+faiss-cpu
+numpy
+pandas
+openai
+pypdf
+sentence-transformers
+fastapi
