updatet rag_core logic

--- a/manuals/manuals_index/config.json
+++ b/manuals/manuals_index/config.json
@@ -16,14 +16,14 @@
   "min_alpha_ratio": 0.6,
   "merge_min_tokens": 60,
   "manual_paths": [
-    "manuals\\manuals_text\\manual-01.txt",
-    "manuals\\manuals_text\\manual-02.txt",
-    "manuals\\manuals_text\\manual-03.txt",
-    "manuals\\manuals_text\\manual-04.txt",
-    "manuals\\manuals_text\\manual-05-synthetic.txt",
-    "manuals\\manuals_text\\manual-06-synthetic.txt",
-    "manuals\\manuals_text\\manual-07-synthetic.txt",
-    "manuals\\manuals_text\\manual-08-synthetic.txt"
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-01.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-02.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-03.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-04.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-05-synthetic.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-06-synthetic.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-07-synthetic.txt",
+    "c:\\Users\\SEM\\Documents\\Uni\\GenAi\\Genai-G63\\manuals\\manuals_text\\manual-08-synthetic.txt"
   ],
   "num_chunks": 309
 }
